# Calendar

./: .gitignore  CLAUDE.md  Cargo.toml  PERFORMANCE.md  README.md  TODO.md  TODO_REFACTORING.md  cargo-sources.json  dev.xarbit.apps.Calendar.yml  io.github.xarbit.SolCalendar.yml  justfile  sol-calendar.desktop  test_import.ics  test_single_event.ics
i18n/cs/: sol_calendar.ftl
i18n/da/: sol_calendar.ftl
i18n/de/: sol_calendar.ftl
i18n/el/: sol_calendar.ftl
i18n/en/: sol_calendar.ftl
i18n/es/: sol_calendar.ftl
i18n/fi/: sol_calendar.ftl
i18n/fr/: sol_calendar.ftl
i18n/it/: sol_calendar.ftl
i18n/nl/: sol_calendar.ftl
i18n/no/: sol_calendar.ftl
i18n/pl/: sol_calendar.ftl
i18n/pt/: sol_calendar.ftl
i18n/ro/: sol_calendar.ftl
i18n/sv/: sol_calendar.ftl
i18n/uk/: sol_calendar.ftl
res/: io.github.xarbit.SolCalendar.desktop  io.github.xarbit.SolCalendar.service
src/: app.rs  caldav.rs  color_constants.rs  demo_data.rs  layout.rs  layout_constants.rs  locale.rs  localize.rs  localized_names.rs  main.rs  menu_action.rs  message.rs  selection.rs  storage.rs  styles.rs  ui_constants.rs  update.rs  url_handler.rs
src/calendars/: config.rs  local_calendar.rs  mod.rs
src/components/: calendar_dialog.rs  calendar_list.rs  color_picker.rs  day_cell.rs  event_chip.rs  event_dialog.rs  header_menu.rs  mini_calendar.rs  mod.rs  time_grid.rs
src/database/: mod.rs  schema.rs
src/dialogs/: manager.rs  mod.rs  subscribe_dialog.rs
src/models/: calendar_state.rs  day_state.rs  mod.rs  week_state.rs
src/protocols/: local.rs  mod.rs
src/update/: mod.rs  (+3 more)
(+36 files in other folders)
