[package]
name = "sol-calendar"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A calendar application for the COSMIC Desktop"
repository = "https://github.com/xarbit/sol"
authors = ["xarbit"]

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = ["wayland", "winit", "tokio"] }
tokio = { version = "1.41", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
icalendar = "0.16"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
